# COHERENCE-26_ENTROPY

./: .gitignore  README.md  backend_endpoint.md  data.csv  docker-compose.yml  flow.md  sample_leads.csv  start.sh
backend/: .env.example  BACKEND.md  Dockerfile  Phases.md  check_db.py  import_csv.py  output.txt  output_utf8.txt  pyproject.toml  requirements.txt  smtp_test_log.txt  test_err.txt  test_output.txt
backend/app/: config.py  database.py  main.py
backend/app/api/: __init__.py  ai.py  analytics.py  campaigns.py  channels.py  collab.py  leads.py  webhooks.py  workflows.py
backend/app/integrations/: email_client.py  google_sheets_client.py  linkedin_client.py  whatsapp_client.py
backend/app/models/: __init__.py  campaign.py  collab.py  execution.py  lead.py  message.py  workflow.py
backend/app/nodes/: __init__.py  ai_conversation_node.py  ai_message_node.py  analytics_node.py  channel_select_node.py  check_reply_node.py  followup_node.py  lead_import_node.py  send_message_node.py  sheets_update_node.py  start_node.py  wait_node.py
backend/app/schemas/: __init__.py  campaign_schema.py  (+4 more)
backend/scripts/: test_smtp.py
backend/tests/: PHASE1_TESTING.md  conftest.py  test_ai.py  test_ai_agentic.py  test_analytics.py  test_channels_analytics.py  test_file_parser.py  test_health.py  test_leads.py  test_nodes.py  test_webhooks.py  test_workflows.py
backend/workers/: celery_app.py  messaging_worker.py  reply_worker.py  workflow_worker.py
services/email-service/: README.md  config.py  email_handler.py  email_service_postman.json  pyproject.toml  server.py
(+171 files in other folders)
