[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiosmtplib==3.0.2",
    "alembic==1.14.1",
    "celery[redis]==5.4.0",
    "factory-boy==3.3.1",
    "fastapi==0.115.6",
    "google-auth==2.37.0",
    "google-generativeai==0.8.4",
    "groq==0.14.0",
    "gspread==6.1.4",
    "httpx==0.28.1",
    "jinja2==3.1.5",
    "loguru==0.7.3",
    "openpyxl==3.1.5",
    "pandas==2.2.3",
    "psycopg2-binary==2.9.10",
    "pydantic-settings==2.7.1",
    "pydantic[email]==2.10.4",
    "pytest==8.3.4",
    "pytest-asyncio==0.25.0",
    "python-dotenv==1.0.1",
    "python-multipart==0.0.20",
    "redis==5.2.1",
    "sqlalchemy==2.0.36",
    "uvicorn[standard]==0.34.0",
]
